--- a/index.html
+++ b/index.html
@@ -490,22 +490,22 @@
 
         switch (valorBotao) {
           case 15:
-            link = "https://pay.novopagamentooseguroo.com/checkout/943801b3-0a87-42be-82e2-9ec89d79045e";
+            link = "https://go.nitropagamentos.com/aztjngww3a";
             break;
           case 30:
-            link = "https://pay.novopagamentooseguroo.com/checkout/70c5b0ce-e11d-40bd-abeb-f40636191ceb";
+            link = "https://go.nitropagamentos.com/5bkghzahpw";
             break;
           case 40:
-            link = "https://pay.novopagamentooseguroo.com/checkout/f0a6434b-12c9-45c5-98eb-4fefacfcab52";
+            link = "https://go.nitropagamentos.com/by9wwui0v5";
             break;
           case 120:
-            link = "https://pay.novopagamentooseguroo.com/checkout/5242a6c7-0c6c-4dbc-9779-60181ac58cd9";
+            link = "https://go.nitropagamentos.com/yqfgokzuqu";
             break;
           case 200:
-            link = "https://pay.novopagamentooseguroo.com/checkout/4f12e604-f3cd-46ae-b62c-340d8d1df6c9";
+            link = "https://go.nitropagamentos.com/b5haiv7med";
             break;
           case 500:
-            link = "https://pay.novopagamentooseguroo.com/checkout/cf8785fe-781f-47b3-a141-37fc78c2d950";
+            link = "https://go.nitropagamentos.com/rb1cw8gz7p";
             break;
         }
 
