--- a/index.html
+++ b/index.html
@@ -490,22 +490,22 @@
 
         switch (valorBotao) {
           case 15:
-            link = "https://go.nitropagamentos.com/aztjngww3a";
+            link = "https://go.cinqpay.com.br/ldg7eyt8my";
             break;
           case 30:
-            link = "https://go.nitropagamentos.com/5bkghzahpw";
+            link = "https://go.cinqpay.com.br/2mf4c2ppiq";
             break;
           case 40:
-            link = "https://go.nitropagamentos.com/by9wwui0v5";
+            link = "https://go.cinqpay.com.br/x7e7thf1rz";
             break;
           case 120:
-            link = "https://go.nitropagamentos.com/yqfgokzuqu";
+            link = "https://go.cinqpay.com.br/beo7f6zgyl";
             break;
           case 200:
-            link = "https://go.nitropagamentos.com/b5haiv7med";
+            link = "https://go.cinqpay.com.br/ks3hrehhlx";
             break;
           case 500:
-            link = "https://go.nitropagamentos.com/rb1cw8gz7p";
+            link = "https://go.cinqpay.com.br/er0p0hrps5";
             break;
         }
 
